--- a/styles/bio.css
+++ b/styles/bio.css
@@ -146,26 +146,26 @@
 }
 .footer__title {
   color: white;
-  font-size: 2.1875rem;
+  font-size: 1.5rem;
   font-weight: 600;
-  padding-bottom: 5rem;
+  padding-bottom: 4rem;
   width: auto;
 }
 @media screen and (min-width: 768px) {
   .footer__title {
-    font-size: 2.125rem;
+    font-size: 2.25rem;
     padding-bottom: 1.5rem;
   }
 }
 .footer__socials-container {
   flex: 1;
   width: 100%;
-  padding-top: 0.3125rem;
+  padding-top: 8px;
   display: flex;
   justify-content: flex-start;
   gap: 1.875rem;
   position: absolute;
-  top: 3.75rem;
+  top: 40px;
 }
 @media screen and (min-width: 768px) {
   .footer__socials-container {
@@ -174,7 +174,7 @@
   }
 }
 .footer__socials-icon {
-  height: 2.1875rem;
+  height: 24px;
 }
 @media screen and (min-width: 768px) {
   .footer__socials-icon {
@@ -189,8 +189,13 @@
   .footer__card-container {
     flex-direction: row;
     justify-content: flex-start;
-    gap: 2.5rem;
+    gap: 2rem;
     margin-top: 1.875rem;
+  }
+}
+@media screen and (min-width: 768px) and (min-width: 1280px) {
+  .footer__card-container {
+    gap: 3rem;
   }
 }
 .footer__name {
@@ -199,7 +204,7 @@
 .footer__name-text {
   color: white;
   font-weight: 600;
-  font-size: 1.125rem;
+  font-size: 0.8125rem;
 }
 @media screen and (min-width: 768px) {
   .footer__name-text {
@@ -211,7 +216,7 @@
   color: white;
 }
 .footer__location-text {
-  font-size: 1.125rem;
+  font-size: 0.8125rem;
 }
 @media screen and (min-width: 768px) {
   .footer__location-text {
@@ -224,7 +229,7 @@
 .footer__email-text {
   text-decoration: none;
   color: white;
-  font-size: 1.125rem;
+  font-size: 0.8125rem;
 }
 @media screen and (min-width: 768px) {
   .footer__email-text {
@@ -237,11 +242,12 @@
 .footer__copyright {
   color: white;
   font-weight: 400;
-  font-size: 0.875rem;
+  font-size: 11px;
   padding-top: 4.375rem;
 }
 @media screen and (min-width: 768px) {
   .footer__copyright {
+    font-size: 0.875rem;
     padding: 1rem 0;
     margin: 0;
   }
@@ -256,8 +262,8 @@
 }
 .footer__logo {
   position: absolute;
-  top: 22.5rem;
-  width: 9.375rem;
+  top: 310px;
+  width: 120px;
 }
 @media screen and (min-width: 768px) {
   .footer__logo {
@@ -314,7 +320,7 @@
   }
 }
 .hero__title {
-  font-size: 2.1875rem;
+  font-size: 1.5rem;
   color: white;
   font-weight: 600;
   margin-left: 16px;
@@ -344,7 +350,7 @@
   }
 }
 .info__title {
-  font-size: 24px;
+  font-size: 1.5rem;
   font-weight: 600;
   margin-left: 16px;
   margin-top: 1.875rem;
@@ -353,7 +359,7 @@
 @media screen and (min-width: 768px) {
   .info__title {
     margin: 0;
-    font-size: 2.5rem;
+    font-size: 2.25rem;
   }
 }
 .info__band-image-container {
@@ -385,7 +391,7 @@
   }
 }
 .info__quote {
-  font-size: 1.3125rem;
+  font-size: 0.875rem;
   font-weight: 600;
   margin: 0 16px;
   line-height: 1.7;
@@ -393,7 +399,7 @@
 @media screen and (min-width: 768px) {
   .info__quote {
     margin: 0 3.75rem;
-    font-size: 1.375rem;
+    font-size: 1.5rem;
     font-weight: 600;
     line-height: 1.5;
     color: #323232;
@@ -406,7 +412,7 @@
   }
 }
 .info__quote-speaker {
-  font-size: 1.3125rem;
+  font-size: 0.875rem;
   margin-bottom: 2rem;
   font-weight: 600;
   margin: 0.75rem 16px;
@@ -416,7 +422,7 @@
   .info__quote-speaker {
     margin: 0.75rem 3.75rem;
     font-weight: 600;
-    font-size: 1rem;
+    font-size: 1.5rem;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -426,14 +432,14 @@
 }
 .info__bio-title {
   margin: 2rem 16px 0 16px;
-  font-size: 1.25rem;
+  font-size: 0.875rem;
   font-weight: 600;
 }
 @media screen and (min-width: 768px) {
   .info__bio-title {
     margin: 3.125rem 3.75rem 0.75rem 3.75rem;
     font-weight: 600;
-    font-size: 1.375rem;
+    font-size: 1.5rem;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -463,7 +469,7 @@
   width: 100%;
   margin: 0.625rem 0;
   line-height: 1.5;
-  font-size: 1.125rem;
+  font-size: 0.8125rem;
 }
 @media screen and (min-width: 768px) {
   .info__bio {
@@ -491,7 +497,7 @@
 @media screen and (min-width: 768px) {
   .photos__title {
     padding: 2.5rem 2.5rem 0 2.5rem;
-    font-size: 2.5rem;
+    font-size: 2.25rem;
     color: #323232;
   }
 }
@@ -551,12 +557,12 @@
   }
 }
 .comments__title {
-  font-size: 24px;
+  font-size: 1.5rem;
   font-weight: 600;
 }
 @media screen and (min-width: 768px) {
   .comments__title {
-    font-size: 40px;
+    font-size: 2.25rem;
     margin-bottom: 20px;
   }
 }
@@ -579,7 +585,7 @@
   flex: 1;
 }
 .comments__form-label {
-  font-size: 10px;
+  font-size: 0.625rem;
   text-transform: uppercase;
   color: #afafaf;
   margin-bottom: 4px;
@@ -587,7 +593,7 @@
 }
 @media screen and (min-width: 768px) {
   .comments__form-label {
-    font-size: 12px;
+    font-size: 0.75rem;
   }
 }
 .comments__name-input {
@@ -715,7 +721,7 @@
 .comments__comment-list-item {
   display: flex;
   gap: 16px;
-  padding: 10px 0;
+  padding: 14px 0;
   border-bottom: 1px solid #e1e1e1;
 }
 @media screen and (min-width: 768px) {
@@ -725,7 +731,7 @@
 }
 .comments__comment-left-div {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
 }
 .comments__commenter-image {
   border-radius: 50%;
@@ -754,16 +760,32 @@
 }
 .comments__commenter-name-text {
   font-weight: 600;
-  font-size: 15px;
+  font-size: 0.8125rem;
+}
+@media screen and (min-width: 768px) {
+  .comments__commenter-name-text {
+    font-size: 0.875rem;
+  }
 }
 .comments__comment-date {
   color: #afafaf;
-  font-size: 15px;
+  font-size: 0.8125rem;
+}
+@media screen and (min-width: 768px) {
+  .comments__comment-date {
+    font-size: 0.875rem;
+  }
 }
 .comments__comment-lower-div {
   padding-top: 5px;
 }
 .comments__comment-text {
-  font-size: 14px;
+  font-size: 0.8125rem;
   word-wrap: break-word;
+  line-height: 1.5;
+}
+@media screen and (min-width: 768px) {
+  .comments__comment-text {
+    font-size: 0.875rem;
+  }
 }/*# sourceMappingURL=bio.css.map */
