--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -33,13 +33,13 @@
     }
   }
   &__title {
-    font-size: 2.1875rem;
+    font-size: $mobile-page-header;
     color: white;
     font-weight: 600;
     margin-left: 16px;
     @include tablet {
       margin-left: 2.5rem;
-      font-size: 3.75rem;
+      font-size: $tablet-desktop-page-header;
     }
   }
 }
@@ -58,7 +58,7 @@
     margin: auto;
   }
   &__title {
-    font-size: 24px;
+    font-size: $mobile-section-header;
     font-weight: 600;
     margin-left: 16px;
     margin-top: 1.875rem;
@@ -66,7 +66,7 @@
 
     @include tablet {
       margin: 0;
-      font-size: 2.5rem;
+      font-size: $tablet-desktop-section-header;
     }
   }
   &__band-image-container {
@@ -90,13 +90,13 @@
     }
   }
   &__quote {
-    font-size: 1.3125rem;
+    font-size: $mobile-sub-heading;
     font-weight: 600;
     margin: 0 16px;
     line-height: 1.7;
     @include tablet {
       margin: 0 3.75rem;
-      font-size: 1.375rem;
+      font-size: $tablet-desktop-sub-heading;
       font-weight: 600;
       line-height: 1.5;
       color: $bandsite-black;
@@ -107,7 +107,7 @@
     }
   }
   &__quote-speaker {
-    font-size: 1.3125rem;
+    font-size: $mobile-sub-heading;
     margin-bottom: 2rem;
     font-weight: 600;
     margin: 0.75rem 16px;
@@ -115,7 +115,7 @@
     @include tablet {
       margin: 0.75rem 3.75rem;
       font-weight: 600;
-      font-size: 1rem;
+      font-size: $tablet-desktop-sub-heading;
     }
     @include desktop {
       margin: 1rem 5rem;
@@ -123,12 +123,12 @@
   }
   &__bio-title {
     margin: 2rem 16px 0 16px;
-    font-size: 1.25rem;
+    font-size: $mobile-sub-heading;
     font-weight: 600;
     @include tablet {
       margin: 3.125rem 3.75rem 0.75rem 3.75rem;
       font-weight: 600;
-      font-size: 1.375rem;
+      font-size: $tablet-desktop-sub-heading;
     }
     @include desktop {
       margin: 3.125rem 5rem 0.75rem 5rem;
@@ -154,11 +154,11 @@
     width: 100%;
     margin: 0.625rem 0;
     line-height: 1.5;
-    font-size: 1.125rem;
+    font-size: $mobile-body-copy;
     @include tablet {
       line-height: 1.8;
       font-weight: 400;
-      font-size: 0.875rem;
+      font-size: $tablet-desktop-body-copy;
     }
   }
 }
@@ -176,11 +176,11 @@
 
   &__title {
     padding: 16px;
-    font-size: 1.5rem;
+    font-size: $mobile-section-header;
     font-weight: 600;
     @include tablet {
       padding: 2.5rem 2.5rem 0 2.5rem;
-      font-size: 2.5rem;
+      font-size: $tablet-desktop-section-header;
       color: $bandsite-black;
     }
   }
@@ -232,11 +232,11 @@
     }
   }
   &__title {
-    font-size: 24px;
+    font-size: $mobile-section-header;
     font-weight: 600;
 
     @include tablet {
-      font-size: 40px;
+      font-size: $tablet-desktop-section-header;
       margin-bottom: 20px;
     }
   }
@@ -258,13 +258,13 @@
     flex: 1;
   }
   &__form-label {
-    font-size: 10px;
+    font-size: $mobile-labels-buttons;
     text-transform: uppercase;
     color: $silver;
     margin-bottom: 4px;
     margin-top: 10px;
     @include tablet {
-      font-size: 12px;
+      font-size: $tablet-desktop-labels-buttons;
     }
   }
   &__name-input {
@@ -361,7 +361,7 @@
   &__comment-list-item {
     display: flex;
     gap: 16px;
-    padding: 10px 0;
+    padding: 14px 0;
     border-bottom: 1px solid $mercury;
     @include tablet {
       padding: 20px 0;
@@ -369,7 +369,7 @@
   }
   &__comment-left-div {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
   }
   &__commenter-image {
     border-radius: 50%;
@@ -396,18 +396,28 @@
   }
   &__commenter-name-text {
     font-weight: 600;
-    font-size: 15px;
+    font-size: $mobile-body-copy;
+    @include tablet {
+      font-size: $tablet-desktop-body-copy;
+    }
   }
   &__comment-date {
     color: $silver;
-    font-size: 15px;
+    font-size: $mobile-body-copy;
+    @include tablet {
+      font-size: $tablet-desktop-body-copy;
+    }
   }
 
   &__comment-lower-div {
     padding-top: 5px;
   }
   &__comment-text {
-    font-size: 14px;
+    font-size: $mobile-body-copy;
     word-wrap: break-word;
+    line-height: 1.5;
+    @include tablet {
+      font-size: $tablet-desktop-body-copy;
+    }
   }
 }
